package oo.proto;
option optimize_for = SPEED;
option java_package = "oo.proto";
import "o_net_base.proto";

message node_info{
	required string id = 1;
	required string addr = 2;
	required uint64 ping_time = 3;
	enum InetProto{
		TCP = 0;
		UDP = 1;
	};
	required InetProto proto = 4;
	required int32	   port = 5;
}

message node_active{
	required node_info node = 1;
}

message node_kad_update{
	repeated node_info nodes = 1;
}

message store_key{
	required string key = 1;
	required string value = 2;
}

message store_key_result{
	required string key = 1;
	required bool   is_suc = 2;
}

message find_node{
	required string f_id = 1;
}

message find_node_result{
	repeated node_info result = 1;
}

message find_value{
	required string f_id = 1;
}

message find_value_result{
	required node_info r1 = 1;
	optional string	   value = 2;
}